--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/#styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo"
-          >Web<span class="stidio">Studio</span></a
         >
         <ul class="nav-list">
+          <li><a href="./index.html" class="logo"
+          >Web<span class="stidio">Studio</span></a</li>
           <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
           <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
           <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
