--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <header>
       <nav class="nav">
         <ul class="nav-list">
-          <li><a href="./index.html" class="logo"
-          >Web<span class="stidio">Studio</span></a</li>
+          <li>
+            <a href="./index.html" class="logo"
+              >Web<span class="stidio">Studio</span></a
+            >
+          </li>
           <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
           <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
           <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
