--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <body>
     <header>
       <nav class="nav">
+        <a href="./index.html" class="logo"
+          >Web<span class="studio">Studio</span></a
+        >
         <ul class="nav-list">
-          <li>
-            <a href="./index.html" class="logo"
-              >Web<span class="stidio">Studio</span></a
-            >
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link">Studio</a>
           </li>
-          <li class="nav-item"><a href="" class="nav-link">Studio</a></li>
           <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
           <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
         </ul>
