--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body
+  style=" font-family: "Roboto" , sans-serif>
     <header>
       <nav class="nav">
         <a href="./index.html" class="logo"
