--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body
-  style=" font-family: "Roboto" , sans-serif>
+  <body style="font-family: Roboto, sans-serif">
     <header>
       <nav class="nav">
         <a href="./index.html" class="logo"
@@ -134,7 +133,7 @@
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
-              src="images/img-min.jpg"
+              src="./images/img-min.jpg"
               alt="Banking App"
               class="portfolio-image"
               width="360"
@@ -145,7 +144,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="images/img(1)-min.jpg"
+              src="./images/img(1)-min.jpg"
               alt="Cashless Payment"
               class="portfolio-image"
               width="360"
@@ -156,7 +155,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="images/img(2)-min.jpg"
+              src="./images/img(2)-min.jpg"
               alt="Meditation App"
               class="portfolio-image"
               width="360"
@@ -167,7 +166,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="images/img(3)-min.jpg"
+              src="./images/img(3)-min.jpg"
               alt="Taxi Service"
               class="portfolio-image"
               width="360"
@@ -178,7 +177,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="images/img(5)-min.jpg"
+              src="./images/img(5)-min.jpg"
               alt="Screen Illustrations"
               class="portfolio-image"
               width="360"
@@ -189,7 +188,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="images/img(4)-min.jpg"
+              src="./images/img(4)-min.jpg"
               alt="Online Courses"
               class="portfolio-image"
               width="360"
@@ -202,8 +201,8 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="studio">Studio</span></a
+      <a href="./index.html" class="footer-logo"
+        >Web<span class="footer-studio">Studio</span></a
       >
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
