--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </li>
           <li class="team-member">
             <img
-              src="./images/img(1).jpg"
+              src="./images/img1.jpg"
               alt="Tom Ford"
               class="team-photo"
               width="264"
@@ -106,7 +106,7 @@
           </li>
           <li class="team-member">
             <img
-              src="./images/img(2).jpg"
+              src="./images/img2.jpg"
               alt="Camila Garcia"
               class="team-photo"
               width="264"
@@ -117,7 +117,7 @@
           </li>
           <li class="team-member">
             <img
-              src="./images/img(3).jpg"
+              src="./images/img3.jpg"
               alt="Daniel Wilson"
               class="team-photo"
               width="264"
@@ -133,7 +133,7 @@
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
-              src="./images/img-min.jpg"
+              src="./images/imgmin.jpg"
               alt="Banking App"
               class="portfolio-image"
               width="360"
@@ -144,7 +144,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/img(1)-min.jpg"
+              src="./images/img1min.jpg"
               alt="Cashless Payment"
               class="portfolio-image"
               width="360"
@@ -155,7 +155,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/img(2)-min.jpg"
+              src="./images/ig-min.jpg"
               alt="Meditation App"
               class="portfolio-image"
               width="360"
@@ -166,7 +166,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/img(3)-min.jpg"
+              src="./images/img3min.jpg"
               alt="Taxi Service"
               class="portfolio-image"
               width="360"
@@ -177,7 +177,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/img(5)-min.jpg"
+              src="./images/img5min.jpg"
               alt="Screen Illustrations"
               class="portfolio-image"
               width="360"
@@ -188,7 +188,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/img(4)-min.jpg"
+              src="./images/img4min.jpg"
               alt="Online Courses"
               class="portfolio-image"
               width="360"
