--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/img1min.jpg"
+              src="./images/imgimin.jpg"
               alt="Cashless Payment"
               class="portfolio-image"
               width="360"
@@ -155,7 +155,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/ig-min.jpg"
+              src="./images/imgiimin.jpg"
               alt="Meditation App"
               class="portfolio-image"
               width="360"
@@ -166,7 +166,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/img3min.jpg"
+              src="./images/imgiiimin.jpg"
               alt="Taxi Service"
               class="portfolio-image"
               width="360"
@@ -177,7 +177,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/img5min.jpg"
+              src="./images/imgvmin.jpg"
               alt="Screen Illustrations"
               class="portfolio-image"
               width="360"
@@ -188,7 +188,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/img4min.jpg"
+              src="./images/imgivmin.jpg"
               alt="Online Courses"
               class="portfolio-image"
               width="360"
