--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body style="font-family: Roboto, sans-serif">
-    <header class="header">
+    <header class="header ">
       <div class="container">
-        <div class="header-flexbox">
-          <nav class="nav">
-            <a href="./index.html" class="logo"
-              >Web<span class="studio">Studio</span></a
+      <div class="heder-container">
+          <nav class="navigation">
+            <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a
             >
             <ul class="nav-list">
               <li class="nav-item">
@@ -52,8 +51,9 @@
             </ul>
           </address>
         </div>
-      </div>
-    </header>
+        </div>
+      </header>
+    </div>
     <main class="main-content">
       <section class="hero-section">
         <div class="container">
