--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body style="font-family: Roboto, sans-serif">
-    <header class="header ">
-      <div class="container">
-      <div class="heder-container">
-          <nav class="navigation">
-            <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a
-            >
-            <ul class="nav-list">
-              <li class="nav-item">
-                <a href="./index.html" class="nav-link">Studio</a>
-              </li>
-              <li class="nav-item">
-                <a href="" class="nav-link">Portfolio</a>
-              </li>
-              <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
-            </ul>
-          </nav>
-          <address class="contact-info">
-            <ul class="contact-list">
-              <li class="contact-item">
-                <a href="mailto:info@devstudio.com" class="contact-link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="contact-item">
-                <a href="tel:+110001111111" class="contact-link"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
-        </div>
-      </header>
-    </div>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="navigation-list">
+          <a class="logo" href="./index.html"
+            >Web<span class="studio">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contact-info">
+          <ul class="contact-list">
+            <li class="contact-item">
+              <a href="mailto:info@devstudio.com" class="contact-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact-item">
+              <a href="tel:+110001111111" class="contact-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    </header>
     <main class="main-content">
       <section class="hero-section">
         <div class="container">
